old version note

--- a/_includes/content.html
+++ b/_includes/content.html
@@ -17,6 +17,8 @@
 
     <div class="container-fluid">
       <h1 id="{{ page.title | slugify }}">{{ page.title }}</h1>
+      <p id="old-version-note">Important: These docs are for the outdated Jets 5 versions and below. For the latest
+        Jets docs: <a href="https://docs.rubyonjets.com">docs.rubyonjets.com</a></p>
       {{ content }}
     </div>
   </div>
